--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "nodemon": "^2.0.4",
     "sqlite3": "^5.0.0"
